00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-logging
  labels:
    app: kube-logging
    logging: "true"
